# dotfiles

./: .gitignore  .zshrc  .zshrc.local.example  AGENTS.md  Brewfile  CLA.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  install.sh  pii-allowlist.txt  pii-ignore-patterns.txt  pyproject.toml  requirements-dev.txt
.cursor/: Dockerfile  environment.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  pii-scan.yml  scorecard.yml  secret-scan.yml
claude/: settings.json
claude/commands/: tpop.md  tpush.md
launchd/: com.chrisobrien-ai.pr-watch.plist
scripts/: cloud-docker-ready.sh
tests/: conftest.py  test_pr_watch.py  test_t.py
